<resources>
    <string name="app_name">Count your color!</string>
    <string name="button_label_one">1</string>
    <string name="button_label_two">2</string>
    <string name="button_label_three">3</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>

    <!-- Win Screen-->
    <string name="finish">Finish</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="your_score">Your score:</string>
    <string name="click_finish">Click \"Finish\" to continue</string>

    <!-- App Menu -->
    <string name="string_ok">OK</string>
    <string name="versus">VS</string>
    <string name="start_new_game">Start new Game</string>
    <string name="continue_game">Continue</string>
    <string name="settings">Settings</string>
    <string name="reset_game">Reset game</string>
    <string name="how_to_play">How to play</string>
    <string name="exit">Exit</string>

    <!-- Settings -->
    <string name="player_a">Player A</string>
    <string name="player_b">Player B</string>
    <string name="name_hint">Name</string>
    <string name="pick_color">Pick a color</string>
    <string name="random">Random</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="unknown">(unknown)</string>

    <!-- How to play -->
    <string name="how_to_play_message1">This is a game for two players on one device.</string>
    <string name="how_to_play_message2">You will win if you score 50 points before your opponent.</string>
    <string name="how_to_play_message3">To earn points, count the number of cells of your color and click the corresponding button.</string>
    <string name="how_to_play_message4">Be careful: you will lose 5 points if you make a mistake.</string>

</resources>
