<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_game_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/standard_padding"
    android:paddingRight="@dimen/standard_padding"
    android:paddingTop="@dimen/standard_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/app_logo" />

    <LinearLayout
        android:id="@+id/ll_game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_player_name_a"
            style="@style/MyPlayerNameTextViewStyle"
            android:gravity="end" />

        <TextView
            android:layout_width="@dimen/vs_text_view_size"
            android:layout_height="@dimen/vs_text_view_size"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/versus"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/vs_text_size" />

        <TextView
            android:id="@+id/tv_player_name_b"
            style="@style/MyPlayerNameTextViewStyle"
            android:gravity="start" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start_game"
        style="@style/MyMenuButtonStyle"
        android:background="@drawable/background_red"
        android:onClick="onClickStartResume"
        android:text="@string/start_new_game" />

    <Button
        android:id="@+id/btn_settings_reset"
        style="@style/MyMenuButtonStyle"
        android:background="@drawable/background_yellow"
        android:onClick="onClickSettingsOrReset"
        android:text="@string/settings" />

    <Button
        style="@style/MyMenuButtonStyle"
        android:background="@drawable/backgournd_green"
        android:onClick="onClickAbout"
        android:text="@string/how_to_play" />

    <Button
        style="@style/MyMenuButtonStyle"
        android:background="@drawable/background_blue"
        android:onClick="onClickExit"
        android:text="@string/exit" />

</LinearLayout>