<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MySettingsTextViewStyle"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/settings_title_text_size" />

            <TextView
                style="@style/MySettingsTextViewStyle"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textSize="@dimen/settings_subtitle_text_size" />

            <TextView
                style="@style/MySettingsNameTextViewStyle"
                android:text="@string/player_a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_name_player_a"
                    style="@style/MyEditTextStyle" />

                <TextView
                    android:id="@+id/tv_color_player_a"
                    style="@style/MyColorPickerTextViewStyle"
                    android:onClick="onClickSelectColor" />

            </LinearLayout>

            <TextView
                style="@style/MySettingsNameTextViewStyle"
                android:text="@string/player_b" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_name_player_b"
                    style="@style/MyEditTextStyle" />

                <TextView
                    android:id="@+id/tv_color_player_b"
                    style="@style/MyColorPickerTextViewStyle"
                    android:onClick="onClickSelectColor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView style="@style/MyTextViewAsDividerStyle" />

            <Button
                style="@style/MySettingsButtonStyle"
                android:onClick="onClickResetSettings"
                android:text="@string/reset" />

            <TextView style="@style/MyTextViewAsDividerStyle" />

            <Button
                style="@style/MySettingsButtonStyle"
                android:onClick="onclickDoneSettings"
                android:text="@string/done" />

            <TextView style="@style/MyTextViewAsDividerStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>