<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_game_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <!-- LinearLayout for Player B buttons score TextView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <Button
            android:id="@+id/button_b_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonB"
            android:rotation="180"
            android:text="@string/button_label_three"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

        <Button
            android:id="@+id/button_b_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonB"
            android:rotation="180"
            android:text="@string/button_label_two"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

        <Button
            android:id="@+id/button_b_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonB"
            android:rotation="180"
            android:text="@string/button_label_one"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

        <TextView
            android:id="@+id/tv_score_b"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:gravity="center"
            android:rotation="180"
            android:textColor="@android:color/white"
            android:textSize="@dimen/game_views_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- LinearLayout for a game cells -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/game_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <GridView
                android:id="@+id/game_grid_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:numColumns="4" />
        </LinearLayout>

    </LinearLayout>

    <!-- LinearLayout for Player A buttons and score TextView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            android:id="@+id/tv_score_a"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/game_views_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_a_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonA"
            android:text="@string/button_label_one"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

        <Button
            android:id="@+id/button_a_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonA"
            android:text="@string/button_label_two"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

        <Button
            android:id="@+id/button_a_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginLeft="@dimen/small_horizontal_margin"
            android:layout_marginRight="@dimen/small_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="onClickButtonA"
            android:text="@string/button_label_three"
            android:textColor="@android:color/black"
            android:textSize="@dimen/game_views_text_size" />

    </LinearLayout>

</LinearLayout>